Fix to toolbarToggle on mobile screens

--- a/css/less/mediaqueries.less
+++ b/css/less/mediaqueries.less
@@ -37,6 +37,10 @@ html.touch{
             width: 24px;
         }
     }
+    .toolbarToggle{
+        width: 100%;
+        display: block;
+    }
 }
 @media (min-width: @screen-sm) and (max-width: @screen-sm-max) {
     .slide-left{
