--- a/css/less/styles.less
+++ b/css/less/styles.less
@@ -239,22 +239,24 @@ body{
 		font-size: 0.5em;
 		color: @gray-light;
 		text-transform: uppercase;
-	}
-	& .toolbarToggle{
-	    padding: 0 0.3em 0 0.7em;
-        font-size: 0.7em;
-        line-height: 1em;
-        color: rgba(0,0,0,0.3);
-        cursor: pointer;
-        &:hover{
-            color: rgba(0,0,0,0.5);
-        }
+		& a{
+			font-weight: 500;
+		}
 	}
 	& #condensedToolbar{
 	    cursor: pointer;
 	}
 }
-
+.toolbarToggle{
+    padding: 0 0.3em 0 0.7em;
+    font-size: 0.7em;
+    line-height: 1em;
+    color: rgba(0,0,0,0.3);
+    cursor: pointer;
+    &:hover{
+        color: rgba(0,0,0,0.5);
+    }
+}
 //CONTENT LISTING
 .contentListing{
 	& .dateHeader{
